Improve layout of Tournament Tab and add custom items

--- a/res/tournaments/tournaments.css
+++ b/res/tournaments/tournaments.css
@@ -14,3 +14,9 @@ QListWidget::item::hover
     background-color: #ff0000;
 }
 
+QListWidget::item::selected
+{
+    background-color: grey;
+}
+
+QLabel { color: white }
