Dirty hack of the year so reload stylesheet also reloads tournament style.

--- a/res/tournaments/tournaments.css
+++ b/res/tournaments/tournaments.css
@@ -11,7 +11,7 @@ QListWidget::item
 
 QListWidget::item::hover
 {
-    background-color: #ff0000;
+    background-color: #0000ff;
 }
 
 QListWidget::item::selected
